fix: horizontal scroll

--- a/src/style/main-page.scss
+++ b/src/style/main-page.scss
@@ -10,6 +10,10 @@ body {
   /* Устанавливаем минимальную высоту для html и body */
   margin: 0;
   /* Убираем отступы */
+
+
+  overflow-x: hidden;
+
 }
 
 body {
